<resources>
    <string name="app_name">RioOMS</string>
    <string name="login_button">Login</string>
    <string name="showText">It worked!</string>
    <string name="email_prompt">Enter email</string>
    <string name="password_prompt">Enter Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="guest_button">Continue as Guest</string>

    <string name="welcome">Login Successful</string>
    <string name="signout_button">Sign Out</string>

    <string name="confirm_password_prompt">Please confirm password</string>
    <string name="name_prompt">Enter name</string>
    <string name="phone_prompt">Enter phone number</string>
    <string name="age_prompt">Enter your age</string>
    <string name="register_button">Register</string>

    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="myTickets">My Tickets</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Placeholder</string>

    <string name="empHome">Employee Home</string>
    <string name="empTickets">Employee Tickets</string>
    <string name="title_activity_employee_view">employeeView</string>

    <string name="title_activity_athlete_view">athleteView</string>
    <string name="athleteHome">Athlete Home</string>
    <string name="athleteSchedule">Athlete Schedule</string>
    <string name="athleteTickets">Athlete Ticktes</string>

    <string name="open">Open Act</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Filter">Filter</string>

    <string name="title_Events">Events</string>
    <string name="title_Tickets">Tickets</string>
    <string name="title_noTickets">There are No Tickets Available</string>
    <string name="title_notifications">Notifications</string>

</resources>
