<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rio_logo"
        android:layout_width="302dp"
        android:layout_height="137dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginBottom="514dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rio_logo" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="442dp"
        android:ems="10"
        android:hint="@string/email_prompt"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="382dp"
        android:ems="10"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_action"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="305dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signup_action"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="235dp"
        android:text="@string/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cont_guest"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="175dp"
        android:text="@string/guest_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>