<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="377dp"
        android:layout_height="272dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="398dp"
        app:srcCompat="@drawable/rio_logo" />

    <ScrollView
        android:layout_width="386dp"
        android:layout_height="519dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="73dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="439dp"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/name_prompt"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signup_email_field"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="136dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="359dp"
                android:ems="10"
                android:hint="@string/email_prompt"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone_field"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="196dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="279dp"
                android:ems="10"
                android:hint="@string/phone_prompt"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.394"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/age_field"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="256dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="199dp"
                android:ems="10"
                android:hint="@string/age_prompt"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signup_password_field"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="316dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="119dp"
                android:ems="10"
                android:hint="@string/password_prompt"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/confirm_password_field"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="376dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:layout_marginBottom="43dp"
                android:ems="10"
                android:hint="@string/confirm_password_prompt"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/register_action"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="466dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:text="@string/register_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>